--- a/viewer3D/index.html
+++ b/viewer3D/index.html
@@ -32,7 +32,7 @@
   </main>
 
   <footer class="footer">
-    <p>Reemplaza <code>assets/models/birdsong.glb</code> con tu modelo real.</p>
+    <p>Reemplaza <code>assets/models/birdsong.glb</code> con tu modelo real, si lo necesitas.</p>
   </footer>
 </body>
 </html>
